--- a/src/app/components/browsing-page/browsing-page.component.html
+++ b/src/app/components/browsing-page/browsing-page.component.html
@@ -1,40 +1,31 @@
 <div class="container-fluid">
     <div class="row">
         <div class="sidebar d-flex justify-content-left col-lg-1 col-sm-1">
-            <mat-card>
+            <mat-card class = "sidebar-card">
                 <mat-card-content>
-                    <div class="quick-access-title">Quick access</div>
-                    <div class="quick-access-item">File 1</div>
-                    <div class="quick-access-item">File 2</div>
-                    <div class="quick-access-item">File 3</div>
+                    <div class="quick-access-title">Quick access</div> 
+                    <div class="quick-access-item" *ngFor="let item of (quickAccessNames)"
+                    (mouseenter) = "handleQuickAccessMouseEnter(item)"
+                    (mouseleave) = "handleQuickAccessMouseLeave(item)"
+                    (click) = "handleQuickAccessClicked(item)">{{(item.hovered) ? item.full : item.short}}</div>
                 </mat-card-content>
             </mat-card>
         </div>
+        
         <div class="browsing-header d-flex col-lg-1 col-sm-1">
-            <div>mzergi\</div>
+            <button type = "button" class = "btn btn-secondary routingButton" (click) = "routeElementClicked('')">Home</button>
+            <button type = "button" class = "btn btn-secondary routingButton" *ngFor="let path of (paths)" (click) = "routeElementClicked(path.current)">{{path.current.replace(path.previous.current, '')}}</button>
         </div>
         <div class="browsing-content col-lg-1 col-sm-1">
             <div class="browsing-content-folders">
                 <b>Folders</b>
                 <div class="card-group">
-                    <div class="col-sm-2 mb-2 mt-4">
+                    <div class="col-sm-2 mb-2 mt-4" *ngFor="let folder of (folders)">
                         <div class="card browsing-content-folders-item">
-                            <div class="card-body">
-                                Cicásképek
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-2 mb-2 mt-4">
-                        <div class="card browsing-content-folders-item">
-                            <div class="card-body">
-                                Kutyásképek
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-2 mb-2 mt-4">
-                        <div class="card browsing-content-folders-item">
-                            <div class="card-body">
-                                Zsiráfosképek
+                            <div class="card-body d-flex">
+                                <div class = "col" (click) = "folderClicked(folder.name)">
+                                    {{folder.name}}
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -43,28 +34,30 @@
                 <div class="browsing-content-files">
                     <b>Files</b>
                     <div class="card-group">
-                        <div class="col-sm-2 mb-2 mt-4">
+                        <div class="col-sm-2 mb-2 mt-4" *ngFor="let file of (files)">
                             <div class="card browsing-content-files-item">
-                                <div class="card-body">
-                                    dogecoin.pdf
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-2 mb-2 mt-4">
-                            <div class="card browsing-content-files-item">
-                                <div class="card-body">
-                                    cutedoggo.jpg
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-2 mb-2 mt-4">
-                            <div class="card browsing-content-files-item">
-                                <div class="card-body">
-                                    very-serious-presentation.ppt
+                                <div class="card-body d-flex">
+                                    <div class = "col">
+                                        {{file.name}}
+                                    </div>
+                                    <div class="row d-flex align-items-center">
+                                        <div class = "col">
+                                            <button mat-icon-button [matMenuTriggerFor]="menu" class = "downloadButton">
+                                                <mat-icon class = "downloadButtonIcon">more_vert</mat-icon>
+                                            </button>
+                                            <mat-menu #menu="matMenu">
+                                                <button mat-menu-item class = "downloadButton" (click) = "downloadRecord(file.name)">
+                                                    <mat-icon class = "downloadIcon">download</mat-icon>
+                                                    <span>Download</span>
+                                                </button>
+                                            </mat-menu>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
