--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 .navbar-full-width{
     left: 0 !important;
     min-width: 100vh !important;
@@ -23,10 +24,11 @@
     position: fixed;
     left: 0;
     min-height: 100vh !important;
-    min-width: 10% !important;
+    min-width: 5% !important;
     padding-left: 1.5% !important;
     z-index: 100;
     padding: 0 0 0;
+    margin-right: 5% !important;
 }
 .browsing-header {
     left: 10%;
@@ -42,11 +44,13 @@
     font-size: large;
     padding-bottom: 0.5%;
     padding-top: 0.5%;
+    margin-left: 5% !important;
 }
 .browsing-content {
     left: 10%;
     min-width: 100% !important;
     flex:auto;
+    margin-left: 5% !important;
 }
 .browsing-content-folders {
     left: 10%;
@@ -80,6 +84,7 @@
     font-size: large;
     font-weight: bold;
     margin-bottom: 20%;
+    min-width: 150% !important;
 }
 .quick-access-item{
     font-size: medium;
@@ -87,6 +92,7 @@
     margin-bottom: 5%;
     color:cornflowerblue;
     transition: 0.2s;
+    overflow-wrap:normal;
 }
 .quick-access-item:hover{
     cursor: pointer;
@@ -99,4 +105,31 @@
     padding-left: 15%;
     padding-top: 5%;
     padding-bottom: 5%;
+    padding-right: 105% !important;
+}
+.routingButton {
+    background-color: transparent;
+    border: none;
+    color: slategray;
+}
+.routingButton:hover{
+    background-color: slategray;
+    color: white;
+}
+.sidebar-card{
+    overflow-wrap:break-word;
+}
+.downloadButton {
+    background-color: transparent;
+    border: none;
+    flex-grow: 0;
+    margin-right: 5%;
+}
+.downloadButton:hover {
+    background-color:lightslategray;
+    border-radius: 10px;
+}
+.sidebar-card{
+    border:none !important;
+    box-shadow: none !important;
 }
